--- a/extra.conf
+++ b/extra.conf
@@ -1,7 +1,7 @@
 [SERVICE]
     flush                 1
     log_level             info
-    parsers_file          parsers_multiline.conf
+    parsers_file          /fluent-bit/etc/parsers_multiline.conf
     
 [FILTER]
     name                  multiline
@@ -13,8 +13,8 @@
     Name cloudwatch
     Match *
     region ap-northeast-1
-    log_group_name hrjoboffer-dev-joboffer-app-fluentbit-logs
-    log_stream_name joboffer-app-$(ecs_task_id)
+    log_group_name fukai-test-fluentbit-logs
+    log_stream_name $(ecs_task_id)
     auto_create_group false
 
 [OUTPUT]
